# gada-smartcontract

./: README.md  cabal.project  gada-seed-sale.cabal  license.md
gada-pab/: gada-pab.cabal
gada-pab/app/: Bootstrap.hs  Main.hs
gada-pab/config/: bootstrap-sample.yaml  nginx.conf
gada-pab/envs/preprod/: bootstrap.yaml  locked_staking_auth_token_script.plutus  locked_staking_script.plutus  locked_staking_treasury_script.plutus  vesting_legacy_auth_token_script.plutus  vesting_legacy_script.plutus  vesting_team_script.plutus
gada-pab/envs/preview/: bootstrap.yaml  vesting_private_sale_script.plutus
gada-pab/envs/testnet/: bootstrap.sh  bootstrap.yaml  locked_staking_six_month_auth_token_script.plutus  locked_staking_six_month_auth_token_script_01012023.plutus
gada-pab/golden-test/: Spec.hs
gada-pab/golden-test/testnet/: lock-staking-auth-token.golden  lock-staking-six-months-auth-token.golden  lock-staking-six-months-script.golden  lock-staking-treasury-script.golden
gada-pab/src/GADA/PAB/: Contracts.hs  Deployment.hs
src/GADA/Contracts/: Common.hs  OffChain.hs  OnChain.hs  Token.hs  Trace.hs  Types.hs  Utils.hs
src/GADA/Contracts/Treasury/: OffChain.hs  OnChain.hs  Type.hs  Types.hs
src/GADA/Contracts/Vesting/: OnChain.hs  Types.hs
test/: Spec.hs  Test.hs
test/Spec/Vesting/: Locked.hs
